# lyx

./: .envrc  .gitignore  .ocamlformat  .ocamlformat-ignore  README.md  dune  dune-project  flake.nix  justfile  lys.cf  lys.opam  lys.opam.license
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  nix.yml
docs/: BOOK.asciidoc  CONTRIBUTING.md
docs/wiki/: Adding-Lys-to-the-PATH.md  Home.md  Installation-on-NixOS.md  Running-from-source.md  The-Lys-pipeline--from-source-code-to-executable-program.md  The-Lyx-pipeline--from-source-code-to-executable-program.md  from-source.md  nixos.md  path.md
examples/: ackermann.lys  conway.lyx  conway.lyx.ml  grammar.lys  grammar.lyx  overview.lys
lib/: ast.ml  ast.mli  desugar.ml  desugar.mli  dune  lexer.ml  lexer.mli  menhir_parser.mly  occurrence_analysis.ml  occurrence_analysis.mli  occurrence_analysis.old.ml  parser.messages  parser.ml  parser.mli  parser_errors.ml  parser_errors.ml.license  parser_errors.mli  reporter.ml  reporter.mli  semantic_analysis.ml  semantics_analysis.ml  semantics_analysis.mli  semantics_analysis.old.ml  type_checker.ml  typed_ast.ml  typed_ast.mli  usage_analysis.ml  usage_analysis.mli
lokasku/: BOOK.asciidoc  _dune  ackermann.lys  descartes.txt  flake.nix  lys.bnf  lys.bnf.license  occurrence_analysis.ml  occurrence_analysis.mli  semantic_analysis.ml  semantic_analysis.mli
lokasku/tests/: _dune  lexer_test.ml  occurrence_analysis_test.ml  occurrence_analysis_test.mli  parser_test.ml  semantic_analysis_test.ml  utils.ml  utils.mli
tests/: dune  lexer_test.ml  occurrence_analysis_test.ml  parser_test.ml  semantic_analysis_test.ml  semantic_analysis_test.mli  utils.ml  utils.mli
