; SPDX-FileCopyrightText: 2025 Aljebriq <143266740+aljebriq@users.noreply.github.com>
; SPDX-FileCopyrightText: 2025 Łukasz Bartkiewicz <lukasku@proton.me>
; 
; SPDX-License-Identifier: GPL-3.0-only

(menhir
 (flags --table)
 (modules menhir_parser))

(library
 (name lys)
 (libraries menhirLib yojson)
 (preprocess
  (pps sedlex.ppx ppx_deriving.show)))
