; SPDX-FileCopyrightText: 2025 Aljebriq <143266740+aljebriq@users.noreply.github.com>
; SPDX-FileCopyrightText: 2025 Łukasz Bartkiewicz <lukasku@proton.me>
;
; SPDX-License-Identifier: GPL-3.0-only

(library
 (name lys_tests)
 (libraries lys)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test))
 (flags
  (:standard -w -33)))
